<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/app_Baslik"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvBaslik" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textStyle="bold"
            android:textSize="18sp" android:fontFamily="@font/russo_one"
            android:textAlignment="center" android:layout_marginTop="24dp" app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintTop_toBottomOf="@+id/photo"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName|numberDecimal|phone"
            android:ems="10"
            android:id="@+id/etkilo"
            android:background="@drawable/edittex_background"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/kilo_giris"
            android:textColor="@color/colorAccent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/cbvenus"
            android:fontFamily="@font/russo_one"/>
    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/tvsonuc"
            android:textSize="18sp" android:textStyle="bold"
            android:fontFamily="@font/russo_one"
            android:textAlignment="center"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/etkilo"/>
    <CheckBox
            android:text="@string/mars"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbmars" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/cbvenus"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvBaslik"
            android:fontFamily="@font/russo_one"/>
    <CheckBox
            android:text="@string/venus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbvenus" app:layout_constraintStart_toEndOf="@+id/cbmars"
            app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/cbjupiter"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/tvBaslik"
            android:fontFamily="@font/russo_one"/>
    <CheckBox
            android:text="@string/jupiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cbjupiter"
            app:layout_constraintStart_toEndOf="@+id/cbvenus" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvBaslik" android:fontFamily="@font/russo_one"/>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:id="@+id/photo" android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvBaslik"/>
</androidx.constraintlayout.widget.ConstraintLayout>